--- a/css/style.css
+++ b/css/style.css
@@ -550,6 +550,10 @@ fieldset {
   color: #ff5635;
 }
 
+.ad-form-header__input:disabled + .ad-form-header__drop-zone:hover {
+  cursor: unset;
+}
+
 .ad-form-header__drop-zone:focus,
 .ad-form-header__input:focus + .ad-form-header__drop-zone {
   color: #ff5635;
@@ -592,9 +596,9 @@ fieldset {
   border-radius: 4px;
 }
 
-.ad-form__element input:hover,
-.ad-form__element select:hover,
-.ad-form__element textarea:hover {
+.ad-form__element:not(:disabled) input:hover,
+.ad-form__element:not(:disabled) select:hover,
+.ad-form__element:not(:disabled) textarea:hover {
   border-color: #ffaa99;
 }
 
@@ -645,12 +649,12 @@ fieldset {
   cursor: pointer;
 }
 
-.feature:hover {
+input[name="feature"]:not(:disabled) + .feature:hover {
   -webkit-box-shadow: inset 0 0 0 1px #ffaa99;
           box-shadow: inset 0 0 0 1px #ffaa99;
 }
 
-.feature:active {
+input[name="feature"]:not(:disabled) + .feature:active {
   -webkit-box-shadow: none;
           box-shadow: none;
   background-color: #ff6547;
@@ -773,7 +777,7 @@ fieldset {
   cursor: pointer;
 }
 
-.ad-form__drop-zone:hover {
+input[names="images"]:not(:disabled) + .ad-form__drop-zone:hover {
   color: #ff5635;
 }
 
@@ -818,7 +822,7 @@ fieldset {
   border-radius: 8px;
 }
 
-.ad-form__submit:hover,
+.ad-form__submit:not(:disabled):hover,
 .ad-form__submit:focus {
   border-color: #ff6d51;
 }
