--- a/css/style.css
+++ b/css/style.css
@@ -649,16 +649,7 @@ fieldset {
   cursor: pointer;
 }
 
-input[name="feature"]:not(:disabled) + .feature:hover {
-  -webkit-box-shadow: inset 0 0 0 1px #ffaa99;
-          box-shadow: inset 0 0 0 1px #ffaa99;
-}
 
-input[name="feature"]:not(:disabled) + .feature:active {
-  -webkit-box-shadow: none;
-          box-shadow: none;
-  background-color: #ff6547;
-}
 
 .features .feature__checkbox {
   width: auto;
@@ -674,6 +665,17 @@ input[name="feature"]:not(:disabled) + .feature:active {
   background-color: #ff6547;
   -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2) inset;
           box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2) inset;
+}
+
+.feature__checkbox:not(:disabled) + .feature:hover {
+  -webkit-box-shadow: inset 0 0 0 1px #ffaa99;
+          box-shadow: inset 0 0 0 1px #ffaa99;
+}
+
+.feature__checkbox:not(:disabled) + .feature:active {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  background-color: #ff6547;
 }
 
 .feature--wifi {
@@ -777,7 +779,7 @@ input[name="feature"]:not(:disabled) + .feature:active {
   cursor: pointer;
 }
 
-input[names="images"]:not(:disabled) + .ad-form__drop-zone:hover {
+.ad-form__input:not(:disabled) + .ad-form__drop-zone:hover {
   color: #ff5635;
 }
 
